[project]
name = "neutrilen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "groq>=0.37.1",
    "huggingface-hub>=1.17.0",
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.4",
    "pillow>=12.2.0",
    "plotly>=6.8.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "streamlit-authenticator>=0.4.2",
]
